trunk/Archive2/a9/5ee00c5256dc7c/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:7:16: error: expected unqualified-id before 'do'
   virtual void do();
                ^
main.cpp:12:17: error: expected unqualified-id before 'do'
   override void do();
                 ^
main.cpp:17:17: error: expected unqualified-id before 'do'
   override void do();
                 ^
main.cpp: In function 'int main(int, char**)':
main.cpp:24:7: error: expected unqualified-id before 'do'
   el->do(); /* WHAT HAPPENS? */
       ^
